--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <script type="importmap">
       {
         "imports": {
-          "corps": "./assets/js/modules/corps.mjs"
+          "corps": "./assets/js/modules/corps.mjs",
           "io": "./assets/js/modules/io.mjs",
           "private": "./assets/js/modules/private.mjs",
+          "processors": "./assets/js/modules/processors.mjs",
           "scraping": "./assets/js/modules/scraping.mjs"
         }
       }
